Intégration du modèle de page des photographes avec les modales

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="acc-bloc">
+        <div class="bloc-page">
 
             <header class="header" role="banner">
                 <a aria-label="FishEye - Page d'accueil" href="index.html">
@@ -43,103 +43,93 @@
 
             <main class="acc-main">
                 <h1>Nos Photographes</h1>
+                
                 <section>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Mimi Keel" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/mimi/mimi_keel.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Mimi Keel" class="fiche__lien" href="photographe.html">
+                            <img class="img-present img-present--200" src="./images/photos/mimi/mimi_keel.jpg" alt="" />
                             <h2>Mimi Keel</h2>
                         </a>
-                        <p class="acc-photogrP">  
-                            <div class="acc-photogr__lieu">London, UK</div>
-                            <div class="acc-photogr__phrase">Voir le beau dans le quotidien</div>
-                            <div class="acc-photogr__revenu">400€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">London, UK</p>
+                        <p class="fiche__citation">Voir le beau dans le quotidien</p>
+                        <p class="fiche__prix">400€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Portrait</a></li>
                             <li><a href="#">#Travel</a></li>
                             <li><a href="#">#Animals</a></li>
                             <li><a href="#">#Events</a></li>
                         </ul>
                     </div>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Ellie-Rose Wilkens" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/ellie_Rose/ellie-rose_wilkens.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Ellie-Rose Wilkens" class="fiche__lien" href="#">
+                            <img class="img-present img-present--200" src="./images/photos/ellie_Rose/ellie-rose_wilkens.jpg" alt="" />
                             <h2>Ellie-Rose Wilkens</h2>
                         </a>
-                        <p>  
-                            <div class="acc-photogr__lieu">Paris, France</div>
-                            <div class="acc-photogr__phrase">Capturer des compositions complexes</div>
-                            <div class="acc-photogr__revenu">250€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">Paris, France</p>
+                        <p class="fiche__citation">Capturer des compositions complexes</p>
+                        <p class="fiche__prix">250€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Sport</a></li>
                             <li><a href="#">#Architecture</a></li>
                         </ul>
                     </div>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Tracy Galindo" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/tracy/tracy_galindo.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Tracy Galindo" class="fiche__lien" href="#">
+                            <img class="img-present img-present--200" src="./images/photos/tracy/tracy_galindo.jpg" alt="" />
                             <h2>Tracy Galindo</h2>
                         </a>
-                        <p>  
-                            <div class="acc-photogr__lieu">Montreal, Canada</div>
-                            <div class="acc-photogr__phrase">Photographe freelance</div>
-                            <div class="acc-photogr__revenu">350€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">Montreal, Canada</p>
+                        <p class="fiche__citation">Photographe freelance</p>
+                        <p class="fiche__prix">350€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Art</a></li>
                             <li><a href="#">#Fashion</a></li>
                             <li><a href="#">#Events</a></li>
                         </ul>
                     </div>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Nabeel Bradford" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/nabeel/nabeel_bradford.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Nabeel Bradford" class="fiche__lien" href="#">
+                            <img class="img-present img-present--200" src="./images/photos/nabeel/nabeel_bradford.jpg" alt="" />
                             <h2>Nabeel Bradford</h2>
                         </a>
-                        <p>  
-                            <div class="acc-photogr__lieu">Mexico City, Mexico</div>
-                            <div class="acc-photogr__phrase">Toujours aller de l'avant</div>
-                            <div class="acc-photogr__revenu">500€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">Mexico City, Mexico</p>
+                        <p class="fiche__citation">Toujours aller de l'avant</p>
+                        <p class="fiche__prix">500€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Portrait</a></li>
                             <li><a href="#">#Travel</a></li>
                         </ul>
                     </div>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Rhode Dubois" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/rhode/rhode_dubois.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Rhode Dubois" class="fiche__lien" href="#">
+                            <img class="img-present img-present--200" src="./images/photos/rhode/rhode_dubois.jpg" alt="" />
                             <h2>Rhode Dubois</h2>
                         </a>
-                        <p>  
-                            <div class="acc-photogr__lieu">Barcelona, Spain</div>
-                            <div class="acc-photogr__phrase">Je crée des souvenirs</div>
-                            <div class="acc-photogr__revenu">275€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">Barcelona, Spain</p>
+                        <p class="fiche__citation">Je crée des souvenirs</p>
+                        <p class="fiche__prix">275€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Sport</a></li>
                             <li><a href="#">#Fashion</a></li>
                             <li><a href="#">#Animals</a></li>
                             <li><a href="#">#Events</a></li>
                         </ul>
                     </div>
-                    <div class="acc-photogr">
-                        <a aria-label="Page de Marcel Nikolic" class="acc-photogr__lien" href="#">
-                            <img src="./images/photos/marcel/marcel_nikolic.jpg" alt="" />
+                    <div aria-label="Fiche du photographe" class="fiche">
+                        <a aria-label="Page de Marcel Nikolic" class="fiche__lien" href="#">
+                            <img class="img-present img-present--200" src="./images/photos/marcel/marcel_nikolic.jpg" alt="" />
                             <h2>Marcel Nikolic</h2>
                         </a>
-                        <p>  
-                            <div class="acc-photogr__lieu">Berlin, Germany</div>
-                            <div class="acc-photogr__phrase">Toujours à la recherche de LA photo</div>
-                            <div class="acc-photogr__revenu">400€/jour</div>
-                        </p>
-                        <ul class="acc-photogr__liste">
+                        <p class="fiche__lieu">Berlin, Germany</p>
+                        <p class="fiche__citation">Toujours à la recherche de LA photo</p>
+                        <p class="fiche__prix">400€/jour</p>
+                        <ul class="fiche__liste">
                             <li><a href="#">#Travel</a></li>
                             <li><a href="#">#Architecture</a></li>
                         </ul>
                     </div>
                 </section>
+                
             </main>
 
         </div>
