Intégration du responsive

--- a/photographe.html
+++ b/photographe.html
@@ -37,20 +37,20 @@
                     <p>300€ / jour</p>
                 </aside>
            
-                <article class="present">
-                    <div class="present-info">
+                <article class="fiche-pho">
+                    <div>
                         <h1>Mimi Keel</h1>
-                        <p class="present-info__lieu">London, UK</p>
-                        <p class="present-info__citation">Voir le beau dans le quotidien</p>
-                        <ul class="present-info__liste">
+                        <p class="fiche-pho__lieu">London, UK</p>
+                        <p class="fiche-pho__citation">Voir le beau dans le quotidien</p>
+                        <ul class="fiche-pho__liste">
                             <li><a href="#">#Portrait</a></li>
                             <li><a href="#">#Travel</a></li>
                             <li><a href="#">#Animals</a></li>
                             <li><a href="#">#Events</a></li>
                         </ul>
-                        <button class="btn btn-present">Contactez-moi</button>
+                        <button class="btn btn--pho">Contactez-moi</button>
                     </div>
-                    <img class="img-present img-present--200" src="./images/photos/mimi/mimi_keel.jpg" alt="Mimi Keel" />
+                    <img class="img-fiche img-fiche--pho" src="./images/photos/mimi/mimi_keel.jpg" alt="Mimi Keel" />
                 </article>
 
                 <section class="galerie">
@@ -59,7 +59,7 @@
                         <ul class="menu-liste">
                             <li>Popularité</li>
                             <li>Date</li>
-                            <li>titre</li>
+                            <li>Titre</li>
                         </ul>    
                     </div>
                     <div class="galerie-cont">
@@ -156,8 +156,8 @@
                                 <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                                 <figcaption>Arc-en-cie</figcaption>
                             </figure>
-                            <i class="fas fa-chevron-left fa-3x"></i>
-                            <i class="fas fa-chevron-right fa-3x"></i>
+                            <i id="chvr-gau" class="fas fa-chevron-left fa-3x"></i>
+                            <i id="chvr-dro" class="fas fa-chevron-right fa-3x"></i>
                             <button class="btn-ferme--carous"></button>
                         </li>
                     </ul>
