Ajout de l'ouverture et de la fermeture des modales

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8" />
         <title>FishEye - Plateforme de photographes</title>
         <link rel="stylesheet" href="./css/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet" />
     </head>
 
     <body>
@@ -47,7 +47,7 @@
                 <section>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Mimi Keel" class="fiche-acc__lien" href="photographe.html">
-                            <img class="img-fiche" src="./images/photos/mimi/mimi_keel.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/MimiKeel.jpg" alt="" />
                             <h2>Mimi Keel</h2>
                         </a>
                         <p class="fiche-acc__lieu">London, UK</p>
@@ -62,7 +62,7 @@
                     </div>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Ellie-Rose Wilkens" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/photos/ellie_Rose/ellie-rose_wilkens.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/EllieRoseWilkens.jpg" alt="" />
                             <h2>Ellie-Rose Wilkens</h2>
                         </a>
                         <p class="fiche-acc__lieu">Paris, France</p>
@@ -75,7 +75,7 @@
                     </div>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Tracy Galindo" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/photos/tracy/tracy_galindo.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/TracyGalindo.jpg" alt="" />
                             <h2>Tracy Galindo</h2>
                         </a>
                         <p class="fiche-acc__lieu">Montreal, Canada</p>
@@ -89,7 +89,7 @@
                     </div>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Nabeel Bradford" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/photos/nabeel/nabeel_bradford.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/NabeelBradford.jpg" alt="" />
                             <h2>Nabeel Bradford</h2>
                         </a>
                         <p class="fiche-acc__lieu">Mexico City, Mexico</p>
@@ -102,7 +102,7 @@
                     </div>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Rhode Dubois" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/photos/rhode/rhode_dubois.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/RhodeDubois.jpg" alt="" />
                             <h2>Rhode Dubois</h2>
                         </a>
                         <p class="fiche-acc__lieu">Barcelona, Spain</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Marcel Nikolic" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/photos/marcel/marcel_nikolic.jpg" alt="" />
+                            <img class="img-fiche" src="./images/id_photos/MarcelNikolic.jpg" alt="" />
                             <h2>Marcel Nikolic</h2>
                         </a>
                         <p class="fiche-acc__lieu">Berlin, Germany</p>
