--- a/photographe.html
+++ b/photographe.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8" />
         <title>FishEye - Plateforme de photographes</title>
         <link rel="stylesheet" href="./css/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />        
     </head>
     
     <body>
@@ -50,7 +50,7 @@
                         </ul>
                         <button class="btn btn--pho">Contactez-moi</button>
                     </div>
-                    <img class="img-fiche img-fiche--pho" src="./images/photos/mimi/mimi_keel.jpg" alt="Mimi Keel" />
+                    <img class="img-fiche img-fiche--pho" src="./images/id_photos/MimiKeel.jpg" alt="Mimi Keel" />
                 </article>
 
                 <section class="galerie">
@@ -65,7 +65,7 @@
                     <div class="galerie-cont">
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -74,7 +74,7 @@
                         </figure>
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -83,7 +83,7 @@
                         </figure>
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -92,7 +92,7 @@
                         </figure>
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -101,7 +101,7 @@
                         </figure>
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -110,7 +110,7 @@
                         </figure>
                         <figure class="galerie-fig">
                             <a aria-label="Ouvre la fenêtre d'aggrandissement">
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                             </a>
                             <figcaption class="galerie-fig__descr">
                                 <h2>Arc-en-ciel</h2>
@@ -153,11 +153,11 @@
                     <ul class="modale-carrous__liste" aria-label="La sélection du photographe">
                         <li>
                             <figure>
-                                <img src="./images/photos/mimi/animals_rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
+                                <img src="./images/galeries/Mimi/Animals_Rainbow.jpg" alt="Un oiseau aux couleurs vives est posée sur une branche" />
                                 <figcaption>Arc-en-cie</figcaption>
                             </figure>
-                            <i id="chvr-gau" class="fas fa-chevron-left fa-3x"></i>
-                            <i id="chvr-dro" class="fas fa-chevron-right fa-3x"></i>
+                            <button class="btn-chvr btn-chvr--gau"><i id="chvr-gau" class="fas fa-chevron-left fa-4x"></i></button>
+                            <button class="btn-chvr btn-chvr--dro"><i id="chvr-dro" class="fas fa-chevron-right fa-4x"></i></i></button>
                             <button class="btn-ferme--carous"></button>
                         </li>
                     </ul>
@@ -167,5 +167,5 @@
 
         </div>
     </body>
-
+    <script src="modales.js"></script>
 </html>
