Génération des fiches à partir de contenu JSON (2 pages)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>Nos Photographes</h1>
                 
                 <section>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
+                    <!-- <div aria-label="Fiche du photographe" class="fiche-acc">
                         <a aria-label="Page de Mimi Keel" class="fiche-acc__lien" href="photographe.html">
                             <img class="img-fiche" src="./images/id_photos/MimiKeel.jpg" alt="" />
                             <h2>Mimi Keel</h2>
@@ -127,12 +127,14 @@
                             <li><a href="#">#Travel</a></li>
                             <li><a href="#">#Architecture</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </section>
                 
             </main>
 
         </div>
     </body>
+    <script type="text/javascript" src="variables.js"></script>
+    <script type="text/javascript" src="fiche-acc.js"></script>
 
 </html>
