--- a/photographe.html
+++ b/photographe.html
@@ -34,23 +34,23 @@
                 
                 <aside class="infosup">
                     <p>297081 <i class="fas fa-heart"></i></p>
-                    <p>300€ / jour</p>
+                    <p><span class="infosup__prix">300</span>€ / jour</p>
                 </aside>
            
                 <article class="fiche-pho">
                     <div>
-                        <h1>Mimi Keel</h1>
-                        <p class="fiche-pho__lieu">London, UK</p>
-                        <p class="fiche-pho__citation">Voir le beau dans le quotidien</p>
+                        <h1></h1>
+                        <p class="fiche-pho__lieu"></p>
+                        <p class="fiche-pho__citation"></p>
                         <ul class="fiche-pho__liste">
-                            <li><a href="#">#Portrait</a></li>
+                            <!-- <li><a href="#">#Portrait</a></li>
                             <li><a href="#">#Travel</a></li>
                             <li><a href="#">#Animals</a></li>
-                            <li><a href="#">#Events</a></li>
+                            <li><a href="#">#Events</a></li> -->
                         </ul>
                         <button class="btn btn--pho">Contactez-moi</button>
                     </div>
-                    <img class="img-fiche img-fiche--pho" src="./images/id_photos/MimiKeel.jpg" alt="Mimi Keel" />
+                    <img class="img-fiche img-fiche--pho" />
                 </article>
 
                 <section class="galerie">
@@ -167,5 +167,8 @@
 
         </div>
     </body>
-    <script src="modales.js"></script>
+    <script type="text/javascript" src="variables.js"></script>
+    <script type="text/javascript" src="modales.js"></script>
+    <script type="text/javascript" src="fiche-pho.js"></script>
+
 </html>
